--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,7 +94,7 @@
   --heading-font-size-xs: 1.8rem;
 
   /* nav height */
-  --nav-height: 64px;
+  --nav-height: 104px;
 
 }
 
@@ -112,7 +112,7 @@ body {
   font-size: var(--body-font-size-m);
   margin: 0;
   font-family: var(--body-font-family);
-  line-height: 1.6;
+  line-height: 1.5;
   color: var(--text-color);
   background-color: var(--background-color);
   display: none;
@@ -131,7 +131,7 @@ h1, h2, h3,
 h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: normal;
-  line-height: 1.25;
+  line-height: 1;
   margin-top: 1em;
   margin-bottom: .5em;
   scroll-margin: calc(var(--nav-height) + 1em);
@@ -148,6 +148,7 @@ p, dl, ol, ul, pre, blockquote {
   margin-top: 1em;
   margin-bottom: 1em;
   font-size: var(--body-font-size-xs);
+  letter-spacing: -.1px
 }
 
 [data-align="center"] {
@@ -254,7 +255,7 @@ main input:hover {
 }
 
 main .section {
-  padding: 64px 0;
+  padding: 64px 15px;
 }
 
 main pre {
