--- a/blocks/engine-specifications/engine-specifications.css
+++ b/blocks/engine-specifications/engine-specifications.css
@@ -3,9 +3,6 @@
 .engine-specifications.engine {
   overflow: hidden;
   padding-left: 40px;
-}
-
-.engine-specifications.engine {
   display: flex;
   flex-direction: column;
 }
@@ -19,9 +16,6 @@
   display: flex;
   flex-direction: column;
   padding-left: 0;
-}
-
-.engine-specifications .item-list {
   list-style: none;
 }
 
@@ -51,20 +45,20 @@
   line-height: 24px;
   font-weight: 500;
 }
+
 .engine-specifications .power-item h5,
 .engine-specifications .torque-item h5{
   font-size: 14px;
 }
 
 @media (min-width: 496px){
-
   .engine-specifications .item-wrapper {
     min-height: 90px;
   }
 
   .engine-specifications .item-list {
+    flex-flow: wrap;
     flex-direction: row;
-    flex-wrap: wrap;
     overflow: auto;
   }
 
@@ -75,7 +69,6 @@
 }
 
 @media (min-width: 769px){
-
   .engine-specifications .item-wrapper {
     min-height: 100px;
   }
@@ -86,5 +79,4 @@
     flex-direction: column;
     max-width: 70%;
   }
-
 }
