--- a/blocks/engine-specifications/performance-specifications.css
+++ b/blocks/engine-specifications/performance-specifications.css
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: center; */
   margin: 0 20px;
   padding: 20px 0;
   padding-left: 0;
@@ -28,9 +27,11 @@
   line-height: 24px;
   font-weight: 500;
 }
+
 .performance .power-item h5,
 .performance .torque-item h5{
   font-size: 14px;
+  margin-top: 0;
 }
 
 .performance .engine-rating {
@@ -46,13 +47,26 @@
 }
 
 .performance .engine-rating .rating-item {
+  padding-top: 2px;
   height: 30px;
   width: 25%;
-  background-color: var(--link-color);
   list-style: none;
   text-align: center;
-  color: white;
+}
+
+.performance a,
+.performance a:visited {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.performance .engine-rating .rating-item[data-active] {
+  background-color: var(--link-color);
   border-radius: 15px;
+}
+
+.performance .engine-rating .rating-item[data-active] a {
+  color: var(--c-white);
 }
 
 .performance .engine-rating .rating-item h5 {
@@ -77,44 +91,35 @@
   margin-bottom: 0;
 }
 
-/* .performance .torque-list ul,
-.performance .power-list ul {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-} */
-
 .performance .torque-item,
 .performance .power-item {
-  /* position: absolute; */
+  position: absolute;
   text-align: left;
+  opacity: 0;
 }
 
-/* .performance .torque-item li,
-.performance .power-item li {
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-} */
-
-.performance .torque-item h5,
-.performance .power-item h5 {
+.performance .torque-item[data-active],
+.performance .power-item[data-active] {
   position: absolute;
-  margin-top: 0;
+  text-align: left;
+  opacity: 1;
 }
 
 .performance-chart-wrapper {
-  /* margin-top: 50px; */
   position: relative;
   height: 50vw;
+  list-style: none;
+  padding: 0;
 }
 
 .performance-chart {
-  /* height: auto; */
   padding: 5px;
   position: absolute;
   inset: 0;
   opacity: 0;
   transition: 200ms opacity ease-in-out;
   transition-delay: 200ms;
+
 }
 
 .performance-chart > svg {
@@ -128,6 +133,5 @@
 
 .performance-chart[data-active] {
   opacity: 1;
-  z-index: 1;
-  transition-delay: 0ms;
+  transition-delay: 0;
 }
