--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -1,36 +1,31 @@
+:root {
+  --btn-hover: #303033;
+  --c-white-80: rgb(255 255 255 / 80%);
+  --text-color-80: rgb(83 86 90 / 80%);
+}
+
 /* boilderplate: the section containing the block */
 .section.teaser-cards-container {
   padding: 0;
 }
 
-/* boilerplate: the wrapper around the block element */
-.section.cards-hero-container .cards-hero-wrapper {
-  margin: 0;
-  padding: 0;
-}
-
 /* boilerplate: the block element itself that gets passed into js decorate() */
 .block.teaser-cards {
-  margin: 48px 0 0;
-  padding: 0;
+  margin-block-start: 48px;
 }
 
 /* mobile */
 
 /* first row div */
-.block.teaser-cards>div {
+.block.teaser-cards > div {
   display: flex;
   flex-flow: column;
-  margin: 0;
-  padding: 0;
 }
 
 /* each teaser div in the row */
 .block.teaser-cards .teaser {
   box-sizing: border-box;
   flex: 0 1 auto;
-  margin-top: 0;
-  margin-bottom: 0;
   padding: 0 30px 15px;
 }
 
@@ -46,30 +41,16 @@
 }
 
 /* teaser title */
-.block.teaser-cards h2,
-.block.teaser-cards h3 {
+.block.teaser-cards :is(h2, h3) {
   margin: 0;
   font-size: var(--heading-font-size-m)
 }
 
-.block.teaser-cards  h2 {
+.block.teaser-cards h2 {
   letter-spacing: 3.6px;
-  font-family: var(--ff-volov-broadprodigital);
+  font-family: var(--ff-volvo-broadprodigital);
   font-size: var(--heading-font-size-xxxl);
   line-height: 1em;
-}
-
-/* teaser title link */
-.block.teaser-cards h3 a {
-  color: var(--text-color);
-}
-
-.block.teaser-cards h3 a::after {
-  color: var(--link-color);
-  content: "\f105";
-  padding-left: 8px;
-  /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-  font-family: fontawesome;
 }
 
 /* teaser text */
@@ -84,27 +65,7 @@
 }
 
 .block.teaser-cards a.cta {
-  color: var(--link-color);
-  font-weight: 700;
-  background-color: transparent;
-  border: none;
-  border-radius: unset;
-  padding: 0;
-  margin: 0;
-  font-family: var(--ff-volvo-novum-regular);
-  font-size: var(--body-font-size-xs);
-}
-
-.block.teaser-cards a.cta:hover {
-  color: var(--link-hover-color);
-}
-
-.block.teaser-cards .cta::after {
-  content: '\f105';
-  /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-  font-family: fontawesome;
-  padding-left: 8px;
-
+  font-family: var(--ff-volvo-novum);
 }
 
 /* single teaser */
@@ -115,12 +76,25 @@
   text-align: center;
 }
 
+.block.teaser-cards.teaser-cards-1 :is(h2, h3) {
+  margin: 30px 0 16px;
+}
+
 .block.teaser-cards.teaser-cards-1 p.text {
   display: none;
 }
 
+.block.teaser-cards.teaser-cards-1 a {
+  background-color: transparent;
+}
+
+.block.teaser-cards.teaser-cards-1 a:hover {
+  border-color: var(--btn-hover);
+  color: var(--btn-hover);
+}
+
 /* link list on mobile */
-.block.teaser-cards.link-list-on-mobile>div {
+.block.teaser-cards.link-list-on-mobile > div {
   flex-flow: column;
 }
 
@@ -133,21 +107,15 @@
 }
 
 @media (min-width: 768px) {
-  .block.teaser-cards {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   /* first row div */
-  .block.teaser-cards>div,
-  .block.teaser-cards.link-list-on-mobile>div {
+  .block.teaser-cards > div,
+  .block.teaser-cards.link-list-on-mobile > div {
     flex-flow: row;
   }
 
   /* each teaser div in the row */
   .block.teaser-cards .teaser {
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-inline: 15px;
     width: 50%;
   }
 
@@ -163,49 +131,59 @@
     position: relative;
     background: none;
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .block.teaser-cards.teaser-cards-1 h2,
-  .block.teaser-cards.teaser-cards-1 h3,
-  .block.teaser-cards.teaser-cards-1 p.text {
+  .block.teaser-cards.teaser-cards-1.dark .teaser {
+    color: var(--text-color);
+  }
+
+  .block.teaser-cards.teaser-cards-1 :is(h2, h3, p.text) {
     display: block;
     max-width: 426px;
-    margin: 0 auto;
   }
 
-  .block.teaser-cards.teaser-cards-1 h2,
-  .block.teaser-cards.teaser-cards-1 h3 {
-    margin-bottom: 16px;
+  .block.teaser-cards.teaser-cards-1 :is(h2, h3) {
+    margin-block-start: 0;
   }
 
   .block.teaser-cards.teaser-cards-1 p.image {
     margin: 0;
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    inset: 0;
     z-index: -1;
   }
 
   .block.teaser-cards.teaser-cards-1 p.image img {
     height: 100%;
   }
+
+  .block.teaser-cards.teaser-cards-1 a {
+    background-color: var(--c-white);
+    border-color: var(--c-white);
+  }
+
+  .block.teaser-cards.teaser-cards-1 a:hover {
+    background-color: var(--c-white-80);
+    border-color: var(--c-white);
+  }
+
+  .block.teaser-cards.teaser-cards-1.dark a {
+    background-color: var(--text-color);
+    border-color: var(--text-color);
+    color: var(--c-white);
+  }
+
+  .block.teaser-cards.teaser-cards-1.dark a:hover {
+    background-color: var(--text-color-80);
+    color: var(--btn-background-hover);
+  }
 }
 
 @media (min-width: 992px) {
-  .block.teaser-cards {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .block.teaser-cards .teaser {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-
-  .block.teaser-cards h2,
-  .block.teaser-cards h3 {
+  .block.teaser-cards :is(h2, h3) {
     margin-bottom: 16px;
   }
 
