--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -11,14 +11,14 @@ header nav {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  display:flex;
-  flex-flow:row;
-  align-items:center;
+  display: flex;
+  flex-flow: row;
+  align-items: center;
 }
 
 /* the brand  */
 header nav .brand {
-  display:flex;
+  display: flex;
   flex-flow: row;
   flex: 1 0 auto;
 }
@@ -29,14 +29,14 @@ header nav .brand .logo .icon-logo svg {
 }
 
 /* the section/location info to the right of the logo */
-header nav .brand .vgsection-location  {
-  margin-left:24px;
-  display:flex;
-  flex-flow:column;
+header nav .brand .vgsection-location {
+  margin-left: 24px;
+  display: flex;
+  flex-flow: column;
 }
 
 /* volvo group section */
-header nav .brand .vgsection-location .vgsection  {
+header nav .brand .vgsection-location .vgsection {
   font-size: 14px;
   font-family: var(--body-font-family);
   color: var(--text-color);
@@ -44,7 +44,7 @@ header nav .brand .vgsection-location .vgsection  {
 }
 
 /* location */
-header nav .vgsection-location .location  {
+header nav .vgsection-location .location {
   font-size: 14px;
   font-family: var(--body-font-family);
   font-weight: 400;
@@ -56,7 +56,7 @@ header nav .search-toggle .search-icon {
   width: 16px;
   height: 16px;
   color: #A7A8A9;
-} 
+}
 
 /* the hamburger icon */
 header nav .hamburger-toggle .hamburger-icon {
@@ -65,7 +65,7 @@ header nav .hamburger-toggle .hamburger-icon {
   margin-left: 12px;
   color: #A7A8A9;
   margin-bottom: 2px;
-} 
+}
 
 /* the search input  */
 header nav .search {
@@ -84,7 +84,7 @@ header nav .search {
 
 header nav .search div {
   display: flex;
-  flex-flow:row;
+  flex-flow: row;
   width: 100%;
   font-family: var(--body-font-family);
 }
@@ -95,7 +95,7 @@ header nav .search-toggle[aria-expanded=true]~.search {
 
 header nav .search input {
   display: block;
-  width:100%;
+  width: 100%;
   height: 44px;
   padding: 10px 40px 10px 15px;
   border: none;
@@ -126,17 +126,17 @@ header nav .search label {
 header nav .semitrans {
   visibility: hidden;
   z-index: 3;
-  top:0;
+  top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   position: fixed;
   opacity: 0;
   background-color: #7F7F7F;
-  transition: visibility .4s linear, opacity .4s cubic-bezier(.4,0,.2,1);
+  transition: visibility .4s linear, opacity .4s cubic-bezier(.4, 0, .2, 1);
 }
 
-header nav .hamburger-toggle[aria-expanded=true]~.semitrans{
+header nav .hamburger-toggle[aria-expanded=true]~.semitrans {
   visibility: visible;
   z-index: 99;
   opacity: 0.7;
@@ -151,8 +151,8 @@ header nav .tools {
   width: 97vw;
   height: 73;
   right: -97vw;
-  top:0;
-  z-index:100;
+  top: 0;
+  z-index: 100;
   background-color: white;
   transition: right .4s linear;
   border-bottom: 1px solid #E1DFDD;
@@ -166,7 +166,7 @@ header nav .hamburger-toggle[aria-expanded=true]~.tools {
 header nav .tools ul {
   display: flex;
   list-style-type: none;
-  gap:22px;
+  gap: 22px;
 }
 
 /* tools entries */
@@ -183,7 +183,7 @@ header nav .tools ul li a {
   font-size: 8pt;
 }
 
-header nav .tools ul li img{
+header nav .tools ul li img {
   width: 16px;
   height: 16px;
 }
@@ -204,27 +204,27 @@ header nav .sections {
 }
 
 /* hamburger menu */
-header nav .hamburger-menu {
+header nav .sections {
   display: flex;
-  align-items:start;
-  justify-content:start;
+  align-items: start;
+  justify-content: start;
   position: fixed;
   width: 97vw;
   height: 100vh;
   right: -97vw;
-  top:76px;
-  z-index:100;
+  top: 76px;
+  z-index: 100;
   background-color: white;
   transition: right .4s linear;
   border-bottom: 1px solid #E1DFDD;
 }
 
-header nav .hamburger-toggle[aria-expanded=true]~.hamburger-menu {
+header nav .hamburger-toggle[aria-expanded=true]~.sections {
   right: 0;
 }
 
 /* section entries */
-header nav .hamburger-menu .sections-list {
+header nav .sections {
   display: flex;
   flex-flow: column;
   margin: 0;
@@ -232,21 +232,28 @@ header nav .hamburger-menu .sections-list {
   width: 100%;
 }
 
-header nav .hamburger-menu .sections-list .section {
-  padding: 15px;
-  border-bottom: 1px solid #E1DFDD;
+header nav .sections .sections-list {
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-header nav .hamburger-menu .sections-list .section a {
-  display:inline-block;
-  text-transform: uppercase;
+header nav .sections .section {
+  padding: 15px;
+  border-bottom: 1px solid #E1DFDD;
   font-size: 14px;
+  line-height: 1.5;
   color: #53565A;
+}
+
+header nav .sections .section a {
+  display: inline-block;
+  text-transform: uppercase;
   width: 100%;
 }
 
- header nav .hamburger-menu .sections-list .section a::after {
-  position:absolute;
+header nav .sections .section a::after {
+  position: absolute;
   right: 15px;
   /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
   font-family: fontawesome;
@@ -258,14 +265,15 @@ header nav .hamburger-menu .sections-list .section a {
 }
 
 /* ----- tablet ------------------------------------------------------ */
-@media (min-width: 768px ) {
+@media (min-width: 768px) {
+
   /* the main mobile div */
-  header nav  {
+  header nav {
     width: 756px;
   }
 
   /* the search input  */
-  header nav .search > div  {
+  header nav .search>div {
     width: 756px;
     margin: 0 auto;
   }
@@ -282,12 +290,12 @@ header nav .hamburger-menu .sections-list .section a {
   }
 
   /* sections only use 50% of width */
-  header nav .hamburger-menu {
+  header nav .sections {
     width: 50vw;
     right: -50vw;
   }
 
-  header nav .hamburger-toggle[aria-expanded=true]~.hamburger-menu {
+  header nav .hamburger-toggle[aria-expanded=true]~.sections {
     width: 50vw;
     right: 0;
   }
@@ -300,18 +308,14 @@ header nav .hamburger-menu .sections-list .section a {
 
 /* ------ Desktop -------------------------------------------------------- */
 @media (min-width: 992px) {
-  /* hide hamburger menu */
-  header nav .hamburger-menu {
-    display: none;
-  }
 
   /* hide mobile search toggle */
-  header nav .search-toggle  {
+  header nav .search-toggle {
     display: none;
   }
 
   /* hide mobile hamburger toggle */
-  header nav .hamburger-toggle  {
+  header nav .hamburger-toggle {
     display: none;
   }
 
@@ -328,13 +332,13 @@ header nav .hamburger-menu .sections-list .section a {
   /* nav turns into css grid */
   header nav {
     width: 100%;
-    display : grid;
-    grid-template: 
-    '. brand tools .' max-content
-    '. brand search .' auto
-    'sections sections sections sections' 48px
-    / 3.5% auto max-content 3.5%;
-    padding:0;
+    display: grid;
+    grid-template:
+      '. brand tools .' max-content
+      '. brand search .' auto
+      'sections sections sections sections' 48px
+      / 3.5% auto max-content 3.5%;
+    padding: 0;
   }
 
   /* brand */
@@ -345,18 +349,18 @@ header nav .hamburger-menu .sections-list .section a {
 
   /* tools */
   header nav .tools {
-    position:initial;
+    position: initial;
     grid-area: tools;
     border: none;
-    justify-content:end;
-    width:100%;
+    justify-content: end;
+    width: 100%;
   }
 
   /* list of tools */
   header nav .tools ul {
-    margin:0;
+    margin: 0;
     padding: 20px 45px 0 0;
-    gap:20px;
+    gap: 20px;
   }
 
   /* tools entries */
@@ -365,7 +369,7 @@ header nav .hamburger-menu .sections-list .section a {
     flex-flow: row;
     align-items: center;
     justify-content: space-between;
-    gap:8px;
+    gap: 8px;
   }
 
   header nav .tools ul li a {
@@ -373,7 +377,7 @@ header nav .hamburger-menu .sections-list .section a {
     font-size: 8pt;
   }
 
-  header nav .tools ul li img{
+  header nav .tools ul li img {
     width: 14px;
     height: 14px;
   }
@@ -382,10 +386,10 @@ header nav .hamburger-menu .sections-list .section a {
   header nav .search {
     align-self: start;
     justify-self: start;
-    position:initial;
+    position: initial;
     grid-area: search;
     height: fit-content;
-    width:100%;
+    width: 100%;
     padding: 0;
     margin: 0;
   }
@@ -393,7 +397,7 @@ header nav .hamburger-menu .sections-list .section a {
   header nav .search div {
     padding: 10px 45px 0 0;
     display: flex;
-    flex-flow:row;
+    flex-flow: row;
     justify-content: right;
   }
 
@@ -413,7 +417,7 @@ header nav .hamburger-menu .sections-list .section a {
   }
 
   header nav .search input:focus {
-    border: 1pt solid black ;
+    border: 1pt solid black;
   }
 
   header nav .search .search-button {
@@ -428,31 +432,32 @@ header nav .hamburger-menu .sections-list .section a {
   /* sections */
   header nav .sections {
     display: initial;
-    position:initial;
+    position: initial;
     grid-area: sections;
     height: 48px;
-    width:100%;
+    width: 100%;
     background-color: #E1DFDD;
   }
 
-  header nav .sections .sections-list{
+  header nav .sections .sections-list {
     display: flex;
-    flex-flow:row;
-    gap:45px;
-    height:48px;
+    flex-flow: row;
+    gap: 48px;
+    height: 48px;
     align-items: center;
-    width:93%;
+    width: 93%;
     margin: 0 auto;
   }
 
-  header nav .sections .section  {
-    text-transform: uppercase;
-    color: #53565A;
+  header nav .sections .section {
+    border: 0;
+    padding: 0;
     font-size: 12px;
+    line-height: 1;
   }
 
   header nav .sections .section a::after {
-    position:initial;
+    position: initial;
     /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
     font-family: fontawesome;
     content: "\f105";
@@ -463,9 +468,10 @@ header nav .hamburger-menu .sections-list .section a {
 
 /* ---- Desktop Wide  ------ */
 @media (min-width: 1300px) {
+
   /* nav get fixed width of 1200px */
   header nav {
-    grid-template-columns: auto  600px 600px auto;
+    grid-template-columns: auto 600px 600px auto;
   }
 
   /* section nav fixed width of 1200px */
@@ -474,4 +480,3 @@ header nav .hamburger-menu .sections-list .section a {
     margin: 0 auto;
   }
 }
-
