--- a/blocks/press-releases/press-releases.css
+++ b/blocks/press-releases/press-releases.css
@@ -11,6 +11,7 @@
 .block.press-releases article img {
     display: block;
     width: 100%;
+    margin-bottom: 1em;
 }
 
 .block.press-releases article p {
@@ -19,7 +20,13 @@
     font-size: 1.3rem;
 }
 
-.block.press-releases article h4.date {
+.block.press-releases article span.date {
+    line-height: 2.1rem;
+    font-size: 1.4rem;
+    color: var(--volvo-text-light-gray);
+}
+
+.block.press-releases .press-releases-cards span.date {
     line-height: 1.4rem;
     font-size: 1.6rem;
     margin-top: 16px;
@@ -30,17 +37,31 @@
 .block.press-releases article h3 {
     font-size: 2.4rem;
     line-height: 3.2rem;
-    margin-bottom: 10px;
+    margin-top: 0.5em;
+    margin-bottom: 0.75em;
 }
 
 .block.press-releases article h3 a {
     color: var(--volvo-text-gray);
 }
 
-.block.press-releases p.button-container {
-    text-align: center;
-    margin-top: 3em;
-    margin-bottom: 3em;
+.block.press-releases .pager {
+    font-size: 1.4rem;
+    display: grid;
+    margin-bottom: 1em;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.block.press-releases .pagination {
+    justify-self: end;
+}
+
+.block.press-releases .pagination .scroll {
+    padding: 0;
+    margin: 0 0 0 15px;
+    display: inline-flex;
+    gap: 5px;
+    list-style: none;
 }
 
 .block.press-releases p.button-container a {
@@ -50,8 +71,30 @@
     border: 2px solid var(--volvo-text-gray);
 }
 
+.block.press-releases .pagination .scroll a {
+    color: var(--volvo-text-gray);
+    font-family: var(--ff-volvo-novum-medium);
+}
+
+.block.press-releases p.button-container {
+    text-align: center;
+    margin-top: 3em;
+    margin-bottom: 3em;
+}
+
 .block.press-releases p.button-container a:hover {
     background-color: var(--background-hover-color);
+}
+
+.block.press-releases .article-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.block.press-releases .article-list article {
+    padding: 2em 0;
+    border-top: 1px solid var(--background-light-gray);
 }
 
 @media screen and (min-width: 768px){
@@ -59,9 +102,15 @@
         display: flex;
     }
 
-    .block.press-releases article {
+    .block.press-releases .press-releases-cards article {
         flex: 0 0 33.33%;
         padding: 0 15px;
+    }
+
+    .block.press-releases .article-list article {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        gap: 15px;
     }
 
     .block.press-releases article img {
